# irmcp

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/irmcp/: prompt_factory.py  server.py
src/servers/: __init__.py
src/servers/ct/: __init__.py  ct_notes.md  ct_prompts.py  ct_server.py  ct_tools.py  ctg-oas-v2.yaml  desktop_config.json  essie_gpt.md
src/servers/pubchem/: TROUBLESHOOTING.md  __init__.py  chemical_naming_rules.md  desktop_config.json  pug-rest.md  pug-view.md  pug_prompts.py  pug_rest.xsd  pug_rest_openapi.yaml  pug_rest_server.py  pug_view.xsd
tests/: conftest.py  test_fastmcp_openapi_query_style.py  test_prompt_factory_unit.py  test_server_factory_unit.py  test_smoke.py
