[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irmcp"
version = "0.1.0"
description = "IR MCP project using FastMCP and httpx"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Maya Geer" }]
dependencies = [
  "fastmcp",
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["irmcp*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-pyyaml>=6.0.12.20250809",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
files = ["src/irmcp", "tests"]
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true
no_implicit_optional = true
disallow_incomplete_defs = true
check_untyped_defs = true
